Add RainbowHeader to shop, account, and account_admin pages

--- a/app/lib/l10n/app_en.arb
+++ b/app/lib/l10n/app_en.arb
@@ -121,5 +121,85 @@
   "createMapEditor": "Create a map from the editor",
   "layers": "Layers",
   "visibleLayers": "Visible layers",
-  "hideLayers": "Hide layers"
+  "hideLayers": "Hide layers",
+  "connection": "Connection",
+  "accessYourSpace": "Access your space",
+  "signIn": "Sign in",
+  "signingIn": "Signing in...",
+  "continueAsGuest": "Continue as guest",
+  "createAccountWithEmail": "Create account with email",
+  "creating": "Creating...",
+  "continueWithGoogle": "Continue with Google",
+  "continueWithApple": "Continue with Apple",
+  "myFavorites": "My favorites",
+  "myGroups": "My groups",
+  "savedPlacesGroups": "Saved places and groups",
+  "accessYourCommunities": "Access your communities",
+  "manageAlerts": "Manage your alerts",
+  "languagePrivacy": "Language, privacy…",
+  "help": "Help",
+  "faqSupport": "FAQ & support",
+  "administration": "Administration",
+  "adminSpace": "Administrator Space",
+  "manageApp": "Manage application",
+  "disconnect": "Disconnect",
+  "premiumMember": "Premium Member",
+  "noFavoritesYet": "No favorites yet.",
+  "place": "Place",
+  "searchLocation": "Search for a location…",
+  "noResults": "No results",
+  "type": "Type",
+  "ok": "OK",
+  "premium": "Premium",
+  "purchaseCancelledFailed": "Purchase cancelled/failed",
+  "clearAllPoints": "Clear all points?",
+  "clear": "Clear",
+  "pointsTooClose": "Points too close?",
+  "pointsVeryClose": "{count} point(s) are very close. Continue?",
+  "@pointsVeryClose": {
+    "description": "Warning about points too close",
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "2"
+      }
+    }
+  },
+  "continueButton": "Continue",
+  "routeSaved": "Route saved",
+  "drawRoute": "Draw a route",
+  "points": "points",
+  "km": "km",
+  "saving": "Saving...",
+  "normalMode": "Normal mode",
+  "close": "Close",
+  "openAdvancedSelector": "Open advanced selector",
+  "profile": "Profile",
+  "language": "Language",
+  "shop": "Shop",
+  "menu": "Menu",
+  "visit": "Visit",
+  "food": "Food",
+  "assistance": "Assistance",
+  "parking": "Parking",
+  "tracking": "Tracking",
+  "theShop": "The Shop",
+  "merchStickersAccessories": "Merch, stickers, accessories & photos",
+  "allGroups": "All groups",
+  "searchArticle": "Search for an item, a group…",
+  "categories": "Categories",
+  "all": "All",
+  "tshirts": "T-shirts",
+  "caps": "Caps",
+  "stickers": "Stickers",
+  "accessories": "Accessories",
+  "group": "Group",
+  "filters": "Filters",
+  "sort": "Sort",
+  "newest": "Newest",
+  "priceAsc": "Price ↑",
+  "priceDesc": "Price ↓",
+  "azSort": "A → Z",
+  "noProductsFound": "No products found",
+  "changeCategoryOrGroup": "Change category, group or search."
 }
