--- a/app/lib/l10n/app_es.arb
+++ b/app/lib/l10n/app_es.arb
@@ -121,5 +121,85 @@
   "createMapEditor": "Crear un mapa desde el editor",
   "layers": "Capas",
   "visibleLayers": "Capas visibles",
-  "hideLayers": "Ocultar capas"
+  "hideLayers": "Ocultar capas",
+  "connection": "Conexión",
+  "accessYourSpace": "Acceda a su espacio",
+  "signIn": "Iniciar sesión",
+  "signingIn": "Iniciando sesión...",
+  "continueAsGuest": "Continuar como invitado",
+  "createAccountWithEmail": "Crear cuenta con correo electrónico",
+  "creating": "Creando...",
+  "continueWithGoogle": "Continuar con Google",
+  "continueWithApple": "Continuar con Apple",
+  "myFavorites": "Mis favoritos",
+  "myGroups": "Mis grupos",
+  "savedPlacesGroups": "Lugares y grupos guardados",
+  "accessYourCommunities": "Acceder a tus comunidades",
+  "manageAlerts": "Gestionar tus alertas",
+  "languagePrivacy": "Idioma, privacidad…",
+  "help": "Ayuda",
+  "faqSupport": "FAQ & soporte",
+  "administration": "Administración",
+  "adminSpace": "Espacio de Administrador",
+  "manageApp": "Gestionar aplicación",
+  "disconnect": "Desconectar",
+  "premiumMember": "Miembro Premium",
+  "noFavoritesYet": "Aún no hay favoritos.",
+  "place": "Lugar",
+  "searchLocation": "Buscar una ubicación…",
+  "noResults": "Sin resultados",
+  "type": "Tipo",
+  "ok": "OK",
+  "premium": "Premium",
+  "purchaseCancelledFailed": "Compra cancelada/fallida",
+  "clearAllPoints": "¿Borrar todos los puntos?",
+  "clear": "Borrar",
+  "pointsTooClose": "¿Puntos demasiado cerca?",
+  "pointsVeryClose": "{count} punto(s) están muy cerca. ¿Continuar?",
+  "@pointsVeryClose": {
+    "description": "Warning about points too close",
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "2"
+      }
+    }
+  },
+  "continueButton": "Continuar",
+  "routeSaved": "Ruta guardada",
+  "drawRoute": "Trazar una ruta",
+  "points": "puntos",
+  "km": "km",
+  "saving": "Guardando...",
+  "normalMode": "Modo normal",
+  "close": "Cerrar",
+  "openAdvancedSelector": "Abrir selector avanzado",
+  "profile": "Perfil",
+  "language": "Idioma",
+  "shop": "Tienda",
+  "menu": "Menú",
+  "visit": "Visitar",
+  "food": "Comida",
+  "assistance": "Asistencia",
+  "parking": "Parking",
+  "tracking": "Tracking",
+  "theShop": "La tienda",
+  "merchStickersAccessories": "Merch, stickers, accesorios y fotos",
+  "allGroups": "Todos los grupos",
+  "searchArticle": "Buscar un artículo, un grupo…",
+  "categories": "Categorías",
+  "all": "Todos",
+  "tshirts": "Camisetas",
+  "caps": "Gorras",
+  "stickers": "Stickers",
+  "accessories": "Accesorios",
+  "group": "Grupo",
+  "filters": "Filtros",
+  "sort": "Ordenar",
+  "newest": "Novedades",
+  "priceAsc": "Precio ↑",
+  "priceDesc": "Precio ↓",
+  "azSort": "A → Z",
+  "noProductsFound": "No se encontraron productos",
+  "changeCategoryOrGroup": "Cambia de categoría, grupo o búsqueda."
 }
