--- a/app/lib/l10n/app_fr.arb
+++ b/app/lib/l10n/app_fr.arb
@@ -121,5 +121,85 @@
   "createMapEditor": "Créez une carte depuis l'éditeur",
   "layers": "Couches",
   "visibleLayers": "Couches visibles",
-  "hideLayers": "Masquer les couches"
+  "hideLayers": "Masquer les couches",
+  "connection": "Connexion",
+  "accessYourSpace": "Accédez à votre espace",
+  "signIn": "Se connecter",
+  "signingIn": "Connexion...",
+  "continueAsGuest": "Continuer en invité",
+  "createAccountWithEmail": "Créer un compte avec email",
+  "creating": "Création...",
+  "continueWithGoogle": "Continuer avec Google",
+  "continueWithApple": "Continuer avec Apple",
+  "myFavorites": "Mes favoris",
+  "myGroups": "Mes groupes",
+  "savedPlacesGroups": "Lieux et groupes enregistrés",
+  "accessYourCommunities": "Accéder à vos communautés",
+  "manageAlerts": "Gérer vos alertes",
+  "languagePrivacy": "Langue, confidentialité…",
+  "help": "Aide",
+  "faqSupport": "FAQ & support",
+  "administration": "Administration",
+  "adminSpace": "Espace Administrateur",
+  "manageApp": "Gérer l'application",
+  "disconnect": "Se déconnecter",
+  "premiumMember": "Premium Member",
+  "noFavoritesYet": "Aucun favori pour le moment.",
+  "place": "Place",
+  "searchLocation": "Rechercher un lieu…",
+  "noResults": "Aucun résultat",
+  "type": "Type",
+  "ok": "OK",
+  "premium": "Premium",
+  "purchaseCancelledFailed": "Achat annulé/échoué",
+  "clearAllPoints": "Effacer tous les points ?",
+  "clear": "Effacer",
+  "pointsTooClose": "Points trop proches ?",
+  "pointsVeryClose": "{count} point(s) sont très proches. Continuer ?",
+  "@pointsVeryClose": {
+    "description": "Warning about points too close",
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "2"
+      }
+    }
+  },
+  "continueButton": "Continuer",
+  "routeSaved": "Parcours enregistré",
+  "drawRoute": "Tracer un parcours",
+  "points": "points",
+  "km": "km",
+  "saving": "Enregistrement...",
+  "normalMode": "Mode normal",
+  "close": "Fermer",
+  "openAdvancedSelector": "Ouvrir le sélecteur avancé",
+  "profile": "Profil",
+  "language": "Langue",
+  "shop": "Boutique",
+  "menu": "Menu",
+  "visit": "Visiter",
+  "food": "Food",
+  "assistance": "Assistance",
+  "parking": "Parking",
+  "tracking": "Tracking",
+  "theShop": "La boutique",
+  "merchStickersAccessories": "Merch, stickers, accessoires & photos",
+  "allGroups": "Tous les groupes",
+  "searchArticle": "Rechercher un article, un groupe…",
+  "categories": "Catégories",
+  "all": "Tous",
+  "tshirts": "T-shirts",
+  "caps": "Casquettes",
+  "stickers": "Stickers",
+  "accessories": "Accessoires",
+  "group": "Groupe",
+  "filters": "Filtres",
+  "sort": "Tri",
+  "newest": "Nouveautés",
+  "priceAsc": "Prix ↑",
+  "priceDesc": "Prix ↓",
+  "azSort": "A → Z",
+  "noProductsFound": "Aucun produit trouvé",
+  "changeCategoryOrGroup": "Change de catégorie, de groupe ou de recherche."
 }
