skip commit - deploy drawer fix

--- a/app/lib/l10n/app_en.arb
+++ b/app/lib/l10n/app_en.arb
@@ -202,6 +202,7 @@
   "azSort": "A → Z",
   "noProductsFound": "No products found",
   "changeCategoryOrGroup": "Change category, group or search.",
+  "shopPhotoStoreTitle": "Photo Shop",
   "shopBestSeller": "Best sellers",
   "shopSeeMore": "See more  >",
   "myOrders": "My orders",
