--- a/app/lib/l10n/app_fr.arb
+++ b/app/lib/l10n/app_fr.arb
@@ -202,6 +202,7 @@
   "azSort": "A → Z",
   "noProductsFound": "Aucun produit trouvé",
   "changeCategoryOrGroup": "Change de catégorie, de groupe ou de recherche.",
+  "shopPhotoStoreTitle": "La Boutique Photo",
   "shopBestSeller": "Meilleures ventes",
   "shopSeeMore": "Voir plus  >",
   "myOrders": "Mes commandes",
