--- a/app/lib/l10n/app_es.arb
+++ b/app/lib/l10n/app_es.arb
@@ -202,6 +202,7 @@
   "azSort": "A → Z",
   "noProductsFound": "No se encontraron productos",
   "changeCategoryOrGroup": "Cambia de categoría, grupo o búsqueda.",
+  "shopPhotoStoreTitle": "Tienda de Fotos",
   "shopBestSeller": "Más vendidos",
   "shopSeeMore": "Ver más  >",
   "myOrders": "Mis pedidos",
