chore: quick deploy

--- a/app/lib/l10n/app_fr.arb
+++ b/app/lib/l10n/app_fr.arb
@@ -179,7 +179,7 @@
   "shop": "Boutique",
   "menu": "Menu",
   "visit": "Visiter",
-  "food": "Restauration",
+  "food": "Food",
   "assistance": "Assistance",
   "parking": "Parking",
   "tracking": "Suivi",
